Fix user menu "learn more" link spacing
Per the design spec of T287523 and T285786.

Bug: T287523

--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -125,8 +125,7 @@
 		}
 
 		.vector-user-menu-anon-editor {
-			margin-top: 2px;
-			padding: @padding-horizontal-user-links;
+			padding: 4px @padding-horizontal-user-links;
 			color: @colorGray5;
 			font-size: @font-size-user-links;
 
